--- a/style.css
+++ b/style.css
@@ -1,40 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+
 :root{
     /*Paleta de Cores*/
     
-    --pageHeaderColor: #0623c1;;
+    --pageHeaderColor: #0623c1;
     --buttonColor: rgb(50, 50, 248);
     --bodyColor:#f8f8e5d4; 
+    --hoverColorInput: rgb(246, 245, 245);
+   
 }
-
-body{
-    height: 100vh;
-    width: 100vw;
-    background-color: white;
-    
-    background-color: beige;
-}
-
-.formularioTitulo{
-    border-style: solid;
-    border-color: rgba(48, 9, 245, 0.162);
-    border-radius: 20px;
-}
-
-.formularioTitulo h1{
-    padding: 5px;
-    font-weight: bold;
-}
-
-
 
 .conteudoPageHeader{
     height: 30vh;
@@ -54,16 +35,27 @@ body{
     flex-direction: column;
 }
 
+.formularioTitulo{
+    border-style: solid;
+    border-color: rgba(48, 9, 245, 0.162);
+    border-radius: 20px;
+}
+
+.formularioTitulo h1{
+    padding: 5px;
+    font-weight: bold;
+}
+
+
 .containerGeral{
     
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: white;
-
+    background-color: antiquewhite;
    
-    
 }
 
 .formularioTitulo{
@@ -89,15 +81,15 @@ body{
   
     padding: 3rem;
     background-color: white;
+    
    
     
 }
 
 .containerInputs{
-    width: 55vw;
+    width: 52vw;
     
 }
-
 
 
 .conteudoInputs{
@@ -106,7 +98,9 @@ body{
 }
 
 .conteudoInputs input:hover{
-    background-color: rgba(246, 243, 243, 0.849)
+    background-color: rgba(246, 243, 243, 0.849);
+    background-color: var(--hoverColorInput);
+    
 
 }
 
@@ -128,7 +122,15 @@ body{
     flex-direction: column;
     
     padding-left: 25px;
+
+    border-style: solid;
+    border-color: rgba(48, 9, 245, 0.162);
+    border-radius: 10px;
      
+}
+
+.sexoInput{
+    padding: 3px;
 }
 
 
@@ -139,7 +141,7 @@ body{
     justify-content: flex-start;
     padding-left: 25px;
     flex-direction: column;
-    background-color: white;
+    
 
 
 }
@@ -196,13 +198,52 @@ textarea:hover{
     width: 100%;
 }
 
-#exampleModalLongTitle{
+.containerModal{
+  
+    display: none;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(2px);
+
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
     width: 100%;
-    text-align: center;
+    z-index: 9999999;
     
+ 
+
 }
 
+#tituloConteudoModal{
+    display: flex;
+    justify-content: center;
+}
+#tituloConteudoModal h4{
+    padding: 3px;
+}
 
+.conteudoModal{
+    width: 50%;
+    background-color: rgb(255, 255, 255);
+    padding: 15px;
+    border-radius: 1rem;
+    
+}
+.conteudoModal li{
+    border-radius: 0.3rem !important;
+}
+
+.containerBotaoFechar{
+    margin-top: 1rem;
+    display: flex;
+    justify-content: flex-end;
+
+}
 
 
 input[type=number]::-webkit-inner-spin-button, 
